# llvm-tutorial

./: CMakeLists.txt  Config.cmake.in  README.md
0_print_func_new_pass/: CMakeLists.txt  PrintFuncNewPass.cpp  TestPrintFuncName.sh
1_dead_code_elimination/: CMakeLists.txt  DeadCodeElimination.cpp  TestDeadCodeElimination.sh
1_dead_code_elimination/testcase/: test.c  test0.ll  test1.ll  test2.ll  test3.ll
2_instruction_move/: CMakeLists.txt
2_instruction_move/testcase/: test.c  test0.ll  test2.ll
